# openai-security-bots

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md
bots/incident-response-slackbot/: Makefile  README.md  pyproject.template.toml
bots/incident-response-slackbot/incident_response_slackbot/: bot.py  config.py  config.toml  handlers.py  openai_utils.py
bots/incident-response-slackbot/incident_response_slackbot/db/: database.py
bots/incident-response-slackbot/scripts/: alert_feed.py  alerts.toml  send_alert.py
bots/incident-response-slackbot/tests/: conftest.py  test_config.toml  test_handlers.py  test_openai.py
bots/sdlc-slackbot/: Makefile  README.md  pyproject.template.toml  requirements.txt  setup.py
bots/sdlc-slackbot/sdlc_slackbot/: .env.template  bot.py  config.py  config.toml  database.py  gdoc.py  utils.py  validate.py
bots/triage-slackbot/: Makefile  README.md  pyproject.template.toml
bots/triage-slackbot/tests/: conftest.py  test_config.toml  test_handlers.py
bots/triage-slackbot/triage_slackbot/: .env.template  bot.py  category.py  config.py  config.toml  handlers.py  openai_utils.py
bots/triage-slackbot/triage_slackbot/templates/blocks/: select_conversation.j2  (+2 more)
shared/openai-slackbot/: pyproject.toml
shared/openai-slackbot/openai_slackbot/: bot.py  handlers.py
shared/openai-slackbot/openai_slackbot/clients/: slack.py
shared/openai-slackbot/openai_slackbot/utils/: envvars.py  slack.py
shared/openai-slackbot/tests/: conftest.py  test_bot.py  test_handlers.py
shared/openai-slackbot/tests/clients/: test_slack.py
(+6 files in other folders)
